--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
   <div id="island">
     <div id="island-header">
       <span id="island-title">Clipboard</span>
+      <span id="island-count"></span>
     </div>
     <div id="island-body"></div>
   </div>
